app/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bulletin-service
spec:
  selector:
    app: bulletin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
